--- a/index.html
+++ b/index.html
@@ -30,5 +30,14 @@
             </div>
         </div>
     </header>
+    <main>
+        <section class="sec1">
+            <h2>We design, build, and scale your technology products</h2>
+            <div>
+                <img src="images/techinnover_banner.jpg" alt="">
+                <div id="banner_text"><h3>Hello! We are Techinnover, your technology partner</h3></div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
