created the marquee for sec2

--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
 <body>
     <header>
         <div class="head">
+            <div class="hamburger">
+                <i class="fa-solid fa-bars"></i>
+                Menu
+            </div>
             <nav>
                 <ul>
                     <li>Home</li>
                     <li>Services</li>
-                    <li>Portflio</li>
+                    <li>Portfolio</li>
                     <li>Blog</li>
                     <li>About</li>
                     <li>Contact</li>
@@ -35,7 +39,67 @@
             <h2>We design, build, and scale your technology products</h2>
             <div>
                 <img src="images/techinnover_banner.jpg" alt="">
-                <div id="banner_text"><h3>Hello! We are Techinnover, your technology partner</h3></div>
+                <div id="banner_text"><h3><span id="banner_span">Hello!</span> We are Techinnover, your technology partner</h3></div>
+            </div>
+        </section>
+        <section class="sec2">
+            <div class="sec2_text">
+                <h3>Quality isn't just a goal; it's our standard</h3>
+                <p>We believe that quality is the foundation of any successful endeavor. From the initial brainstorming sessions to the final deployment, our team maintains rigorous quality control measures to ensure that every line of code, every pixel, and interaction meets the highest standard</p>
+            </div>
+            <div class="portfolio">
+                <div class="projects">
+                    <i class="fa-solid fa-briefcase"></i>
+                    <h3>40+</h3>
+                    <p>Projects completed</p>
+                    <button>
+                        View portfolio
+                    </button>
+                </div>
+                <div class="experts">
+                    <i class="fa-solid fa-laptop-code"></i>
+                    <h3>25+</h3>
+                    <p>Technology experts</p>
+                    <button>
+                        Read our story
+                    </button>
+                </div>
+            </div>
+            <div class="portfolio_img">
+                <marquee behavior="slide" direction="left" loop="infinite">
+                    <div class="e_learning">
+                        <img src="images/portfolio img1.jpg" alt="">
+                        <p>e-Learning Responsive Web Application</p>
+                    </div>
+                    <div class="e_commerce">
+                        <img src="images/portfolio img2.jpg" alt="">
+                        <p>Renewable Energy e-Commerce Marketplace</p>
+                    </div>
+                    <div class="cinema">
+                        <img src="images/portfolio img3.jpg" alt="">
+                        <p>Cinema Ticketing Web &amp; Mobile Application</p>
+                    </div>
+                    <div class="ui_ux">
+                        <img src="images/portfolio img4.jpg" alt="">
+                        <p>User Interface &amp; User Experience</p>
+                    </div>
+                    <div class="chatbot">
+                        <img src="images/portfolio img5.jpg" alt="">
+                        <p>WhatsApp AI Chatbot Project &dash; Insurance</p>
+                    </div>
+                    <div class="ai_platform">
+                        <img src="images/portfolio img6.jpg" alt="">
+                        <p>Conversational AI CRM Platform</p>
+                    </div>
+                    <div class="WA_chatbot">
+                        <img src="images/portfolio img7.jpg" alt="">
+                        <p>WhatsApp AI Chatbot Project &dash; FMCG</p>
+                    </div>
+                    <div class="streaming">
+                        <img src="images/portfolio img8.jpg" alt="">
+                        <p>Live Event Video Streaming Web Application</p>
+                    </div>
+                </marquee>
             </div>
         </section>
     </main>
