created services section

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h2>We design, build, and scale your technology products</h2>
             <div>
                 <img src="images/techinnover_banner.jpg" alt="">
-                <div id="banner_text"><h3><span id="banner_span">Hello!</span> We are Techinnover, your technology partner</h3></div>
+                <div id="banner_text"><h3><span class="span_text">Hello!</span> We are Techinnover, your technology partner</h3></div>
             </div>
         </section>
         <section class="sec2">
@@ -100,6 +100,36 @@
                         <p>Live Event Video Streaming Web Application</p>
                     </div>
                 </marquee>
+            </div>
+        </section>
+        <section class="sec3">
+            <img src="images/student-849822_1280.jpg" alt="">
+            <div class="sec3_text">
+                <h3>Crafting Digital <span class="span_text">Experiences</span> for your Business</h3>
+                <p>We understand that the most powerful software is intuitive, efficient, and enjoyable to use. Our designers and developers collaborate closely to ensure that the end product reflects a seamless journey for your users.</p>
+            </div>
+        </section>
+        <section class="services">
+            <div class="services_txt">
+                <h3>What we are good at</h3>
+                <p>Empower your business with our comprehensive range of software development services.</p>
+            </div>
+            <div class="info">
+                <div id="web">
+                    <i class="fa-solid fa-tv"></i> <h4>Web Development</h4>
+                </div>
+                <div id="mobile">
+                    <i class="fa-solid fa-tv"></i> <h4>Mobile App Development</h4>
+                </div>
+                <div id="design">
+                    <i class="fa-solid fa-tv"></i> <h4>UI/UX Design</h4>
+                </div>
+                <div id="ai">
+                    <i class="fa-solid fa-tv"></i> <h4>AI Chatbot Development</h4>
+                </div>
+                <div id="team">
+                    <i class="fa-solid fa-tv"></i> <h4>Hire Dedicated Team</h4>
+                </div>
             </div>
         </section>
     </main>
