created sec4 and added the correct icons for the services section

--- a/index.html
+++ b/index.html
@@ -119,17 +119,25 @@
                     <i class="fa-solid fa-tv"></i> <h4>Web Development</h4>
                 </div>
                 <div id="mobile">
-                    <i class="fa-solid fa-tv"></i> <h4>Mobile App Development</h4>
+                    <i class="fa-solid fa-mobile-screen"></i> <h4>Mobile App Development</h4>
                 </div>
                 <div id="design">
-                    <i class="fa-solid fa-tv"></i> <h4>UI/UX Design</h4>
+                    <i class="fa-solid fa-pen-nib"></i> <h4>UI/UX Design</h4>
                 </div>
                 <div id="ai">
-                    <i class="fa-solid fa-tv"></i> <h4>AI Chatbot Development</h4>
+                    <i class="fa-solid fa-robot"></i> <h4>AI Chatbot Development</h4>
                 </div>
                 <div id="team">
-                    <i class="fa-solid fa-tv"></i> <h4>Hire Dedicated Team</h4>
+                    <i class="fa-solid fa-user-check"></i> <h4>Hire Dedicated Team</h4>
                 </div>
+            </div>
+        </section>
+        <section class="sec4">
+            <img src="images/collaboration.jpg" alt="">
+            <div class="chat">
+                <h3>Let&apos;s have a chat!</h3>
+                <p>We are open for hire. Let&apos;s bring your creative ideas to life together!</p>
+                <button>Schedule a free call <i class="fa-solid fa-arrow-right"></i></button>
             </div>
         </section>
     </main>
