created the footer section

--- a/index.html
+++ b/index.html
@@ -140,6 +140,31 @@
                 <button>Schedule a free call <i class="fa-solid fa-arrow-right"></i></button>
             </div>
         </section>
+        <footer>
+            <marquee behavior="slide" direction="left">
+                <div class="filmhouse">
+                    <img src="images/FHC LOGO.png" alt="">
+                </div>
+                <div class="nbpc">
+                    <img src="images/nbpc logo.svg" alt="">
+                </div>
+                <div class="">
+                    <img src="images/exam padi logo.svg" alt="">
+                </div>
+                <div class="">
+                    <img src="images/udux logo.svg" alt="">
+                </div>
+                <div class="">
+                    <img src="images/Sterling_logo.png" alt="">
+                </div>
+                <div class="">
+                    <img src="images/logo-coronation.webp" alt="">
+                </div>
+            </marquee>
+            <div id="copyright">
+                <p>All rights reserved 2024 &copy; Techinnover Analytics Limited</p>
+            </div>
+        </footer>
     </main>
 </body>
 </html>
