--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/04b3f38853.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Techinnover Home Page</title>
 </head>
 <body>
     <header>
