styled the header section

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                     <li>Contact</li>
                 </ul>
             </nav>
-            <div id="techinnover">
-                <img src="images/techinnover-logo.png" alt="">
+            <div>
+                <img src="images/techinnover-logo.png" alt="" id="techinnover">
             </div>
             <div class="icons">
                 <i class="fa-brands fa-twitter"></i>
