--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <main>
         <section class="sec1">
             <h2>We design, build, and scale your technology products</h2>
-            <div>
+            <div class="banner">
                 <img src="images/techinnover_banner.jpg" alt="">
                 <div id="banner_text"><h3><span class="span_text">Hello!</span> We are Techinnover, your technology partner</h3></div>
             </div>
