styled the portfolio div in section 2

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <section class="sec2">
             <div class="sec2_text">
                 <h3>Quality isn't just a goal; it's our standard</h3>
-                <p>We believe that quality is the foundation of any successful endeavor. From the initial brainstorming sessions to the final deployment, our team maintains rigorous quality control measures to ensure that every line of code, every pixel, and interaction meets the highest standard</p>
+                <p>We believe that quality is the foundation of any successful endeavor. From the initial brainstorming sessions to the final deployment, our team maintains rigorous quality control measures to ensure that every line of code, every pixel, and every interaction meets the highest standards.</p>
             </div>
             <div class="portfolio">
                 <div class="projects">
