styled the marquee of section 2

--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
                     </button>
                 </div>
             </div>
-            <div class="portfolio_img">
-                <marquee behavior="slide" direction="left" loop="infinite">
+            <div class="marquee">
                     <div class="e_learning">
                         <img src="images/portfolio img1.jpg" alt="">
                         <p>e-Learning Responsive Web Application</p>
@@ -100,7 +99,6 @@
                         <img src="images/portfolio img8.jpg" alt="">
                         <p>Live Event Video Streaming Web Application</p>
                     </div>
-                </marquee>
             </div>
         </section>
         <section class="sec3">
