styled the services section

--- a/index.html
+++ b/index.html
@@ -114,20 +114,20 @@
                 <p>Empower your business with our comprehensive range of software development services.</p>
             </div>
             <div class="info">
-                <div id="web">
-                    <i class="fa-solid fa-tv"></i> <h4>Web Development</h4>
+                <div class="web">
+                    <i class="fa-solid fa-tv"></i><h4>Web Development</h4>
                 </div>
-                <div id="mobile">
-                    <i class="fa-solid fa-mobile-screen"></i> <h4>Mobile App Development</h4>
+                <div class="mobile">
+                    <i class="fa-solid fa-mobile-screen"></i><h4>Mobile App Development</h4>
                 </div>
-                <div id="design">
-                    <i class="fa-solid fa-pen-nib"></i> <h4>UI/UX Design</h4>
+                <div class="design">
+                    <i class="fa-solid fa-pen-nib"></i><h4>UI/UX Design</h4>
                 </div>
-                <div id="ai">
-                    <i class="fa-solid fa-robot"></i> <h4>AI Chatbot Development</h4>
+                <div class="ai">
+                    <i class="fa-solid fa-robot"></i><h4>AI Chatbot Development</h4>
                 </div>
-                <div id="team">
-                    <i class="fa-solid fa-user-check"></i> <h4>Hire Dedicated Team</h4>
+                <div class="team">
+                    <i class="fa-solid fa-user-check"></i><h4>Hire Dedicated Team</h4>
                 </div>
             </div>
         </section>
