--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Techinnover Home Page</title>
 </head>
 <body>
-    <header>
+    <header id="header">
         <div class="head">
             <div class="hamburger">
                 <i class="fa-solid fa-bars"></i>
@@ -140,28 +140,31 @@
             </div>
         </section>
         <footer>
-            <marquee behavior="slide" direction="left">
+            <div class="footer_marquee">
                 <div class="filmhouse">
                     <img src="images/FHC LOGO.png" alt="">
                 </div>
                 <div class="nbpc">
                     <img src="images/nbpc logo.svg" alt="">
                 </div>
-                <div class="">
+                <div class="exam_padi">
                     <img src="images/exam padi logo.svg" alt="">
                 </div>
-                <div class="">
+                <!-- <div class="">
                     <img src="images/udux logo.svg" alt="">
-                </div>
-                <div class="">
+                </div> -->
+                <div class="sterling">
                     <img src="images/Sterling_logo.png" alt="">
                 </div>
-                <div class="">
+                <div class="coronation">
                     <img src="images/logo-coronation.webp" alt="">
                 </div>
-            </marquee>
+            </div>
             <div id="copyright">
                 <p>All rights reserved 2024 &copy; Techinnover Analytics Limited</p>
+            </div>
+            <div class="top">
+               <a href="#header"><i class="fa-solid fa-arrow-up"></i></a>
             </div>
         </footer>
     </main>
