added a lot of media queries

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Techinnover Home Page</title>
 </head>
 <body>
-    <header id="header">
+    <header class="header" id="header">
         <div class="head">
             <div class="hamburger">
                 <i class="fa-solid fa-bars"></i>
@@ -35,7 +35,7 @@
             </div>
         </div>
     </header>
-    <main>
+    <main class="main">
         <section class="sec1">
             <h2>We design, build, and scale your technology products</h2>
             <div class="banner">
